running tests added for coverage